# demonax-tools

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
demonax-core/: Cargo.toml
demonax-core/src/: database.rs  error.rs  file_utils.rs  harvesting.rs  inventory.rs  lib.rs  models.rs  parsers.rs  present.rs  processors.rs  rendering.rs
test_output/: database-queries.Rmd  dev.sqlite
testing/: database-queries.Rmd  database-queries.qmd  demonax-test.sqlite  export-creatures.R  test-all-commands.sh
testing/asset/csv/: quest.csv
testing/asset/template/: present.toml
