[workspace]
members = ["demonax-core", "cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.10"
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2.3"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8"
indicatif = "0.17"
futures = "0.3"
walkdir = "2.5"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
thiserror = "1.0"
glob = "0.3"
lazy_static = "1.4"
bytes = "1.0"
toml = "0.8"
