[package]
name = "demonax-cli"
version = "0.1.0"
edition = "2024"
authors = ["Unknown"]
license = "MIT"
description = "CLI tool for Demonax game server metadata management"
repository = ""

[[bin]]
name = "demonax"
path = "src/main.rs"

[dependencies]
demonax-core = { path = "../demonax-core" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
csv = "1.3"
serde = { workspace = true }
