[package]
name = "demonax-core"
version = "0.1.0"
edition = "2024"
authors = ["Unknown"]
license = "MIT"
description = "Core library for Demonax game server metadata management"
repository = ""

[features]
default = []

[dependencies]
eyre = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
encoding_rs = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
lazy_static = { workspace = true }
bytes = { workspace = true }
